[gd_scene load_steps=4 format=1]

[ext_resource path="res://ref/themes/themeGame.thm" type="Theme" id=1]
[ext_resource path="res://core/Pedia/PediaWindow.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/hack12.fnt" type="BitmapFont" id=3]

[node name="PediaWindow" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 246.0
margin/top = 68.0
margin/right = 626.0
margin/bottom = 338.0
popup/exclusive = false
window/title = "Pedia"
script/script = ExtResource( 2 )

[node name="box" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0

[node name="panel" type="PanelContainer" parent="box"]

visibility/self_opacity = 0.75
visibility/blend_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 380.0
margin/bottom = 270.0

[node name="Show" type="VBoxContainer" parent="box/panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 373.0
margin/bottom = 263.0
alignment = 1

[node name="Entry" type="RichTextLabel" parent="box/panel/Show"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 366.0
margin/bottom = 234.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="Edit" type="Button" parent="box/panel/Show"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 238.0
margin/right = 366.0
margin/bottom = 256.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Edit"
flat = false

[node name="Edit" type="VBoxContainer" parent="box/panel"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 373.0
margin/bottom = 263.0
alignment = 0

[node name="Entry" type="TextEdit" parent="box/panel/Edit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 366.0
margin/bottom = 234.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = true
caret/caret_blink_speed = 0.65

[node name="Function" type="HBoxContainer" parent="box/panel/Edit"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 238.0
margin/right = 366.0
margin/bottom = 256.0
alignment = 1

[node name="Submit" type="Button" parent="box/panel/Edit/Function"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 181.0
margin/bottom = 18.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Submit"
flat = false

[node name="Cancel" type="Button" parent="box/panel/Edit/Function"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 185.0
margin/top = 0.0
margin/right = 366.0
margin/bottom = 18.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[connection signal="about_to_show" from="." to="." method="_on_PediaWindow_about_to_show"]

[connection signal="popup_hide" from="." to="." method="_on_hide"]

[connection signal="meta_clicked" from="box/panel/Show/Entry" to="." method="_goto"]

[connection signal="pressed" from="box/panel/Show/Edit" to="." method="_on_Edit_pressed"]

[connection signal="pressed" from="box/panel/Edit/Function/Submit" to="." method="_on_Submit_pressed"]

[connection signal="pressed" from="box/panel/Edit/Function/Cancel" to="." method="_on_Cancel_pressed"]


